[package]
name = "rfuzz"
version = "0.1.0"
edition = "2024"

[lib]
name = "rfuzz"
crate-type = ["cdylib"]

[dependencies]
maturin = "1.8.2"
polars = { version = "0.46.0", default-features = false }
polars-arrow = "0.46.0"
pyo3 = { version = "0.23.5", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.20.0", features = ["derive"] }
serde = { version = "1.0.218", features = ["derive"] }
